fix: fix pagination visibility

--- a/src/components/NoteList/NoteList.module.css
+++ b/src/components/NoteList/NoteList.module.css
@@ -8,6 +8,8 @@
   padding: 0;
   margin-top: 120px;
   margin-bottom: 40px;
+
+  scroll-margin-top: 80px;
 }
 
 .listItem {
